# dotFiles

./: .gitignore  .vimrc  README.md  backupDotFiles.sh  bashrc.sh  config.sh  configuration.nix  dotfiles_manager  fonts.sh  fonts.txt  ghcup.sh  install_config.sh  laptop.sh  networkmanager.sh  notes  sdkman.sh  setupXmonadDep.sh  tools.sh  vimSetup.sh  xmonad.sh
.config/: alacritty.yml  gtkrc  gtkrc-2.0  konsolerc  pavucontrol.ini
.config/Code - Insiders/: Network Persistent State  TransportSecurity  machineid
.config/OpenRGB/: OpenRGB.json  RGB ZBI.orp
.config/alacritty/: alacritty.yml
.config/dunst/: dunstrc
.config/fish/: config.fish  fish_plugins  fish_variables
.config/gtk-2.0/: gtkfilechooser.ini
.config/gtk-3.0/: bookmarks  colors-twilightSerpent.css  colors.css  firefox.css  gtk-dark.css  gtk.css  settings.ini  thunar.css
.config/gtk-4.0/: colors.css  gtk-dark.css  gtk.css  settings.ini
.config/hypr/: hypridle.conf  hyprland.conf  hyprlock.conf  hyprpaper.conf
.fonts/: .uuid
.xmonad/: build  config.hs  xmonad-build.cabal  xmonad.hs
.xmonad/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
.xmonad/lib/: MyKeyBindings.hi  MyKeyBindings.hs
.xmonad/scripts/: autoMonitor.sh  autostart.sh  picom.conf
home/: .ideavimrc
nixConfig/: README.md  configuration.nix  setup.sh
scripts/: fonts.sh  import_lsps.sh  install_soft.sh  lspSetups.sh  setupDevEnv.sh  setupXmonadDep.sh  setup_dev_environment.sh  texlive_install.sh  tools.sh  vimSetup.sh  xmonad.sh
(+1125 files in other folders)
