-----------------------------------------------------------------------------
name:          xmonad-build
version:       0.15
author:        Silverest <silverest12@gmail.com>
maintainer:    Silverest <silveres12@gmail.com>
category:      Graphics
build-type:    Simple
cabal-version: >=1.8

------------------------------------------------------------------------------
executable xmonad-build
  main-is: config.hs
  ghc-options: -Wall -Werror -fno-warn-missing-signatures
  build-depends: base
               , xmonad
               , xmonad-contrib
               , taffybar
               , X11
               , dbus
               , containers
               , taffybar
               , utf8-string
