-----------------------------------------------------------------------------
cabal-version: 1.24
name:          xmonad-build
version:       0.15
author:        Silverest <silverest12@gmail.com>
maintainer:    Silverest <silveres12@gmail.com>
category:      Graphics
build-type:    Simple

------------------------------------------------------------------------------
executable xmonad-build
  main-is: config.hs
  ghc-options: -Wall -Werror -fno-warn-missing-signatures
  build-depends: base
               , xmonad
               , xmonad-contrib
               , X11
               , dbus
               , containers
               , utf8-string
